feat: complete EmailService